# afs_ioc_migration

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run_afs_to_pcdshub.sh
.github/workflows/: pypi_test.yml
afs_ioc_migration/: __main__.py  hook_template.txt  lock_repo.py  modify.py  readme_template.md  rename.py  sample_gitignore.txt  transfer.py
afs_ioc_migration/tests/: conftest.py  test_lock.py  test_modify.py  test_rename.py  test_transfer.py  test_transfer.sh
