[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=45", "setuptools_scm[toml]>=6.2",]

[project]
classifiers = [ "Programming Language :: Python :: 3",]
description = "ECS afs IOC to GitHub migration tools"
dynamic = [ "version", "readme", "dependencies", "optional-dependencies",]
keywords = []
name = "afs_ioc_migration"
requires-python = ">=3.9"

[options]
zip_safe = false
include_package_data = true

[[project.authors]]
name = "SLAC National Accelerator Laboratory"

[project.license]
file = "LICENSE.md"

[project.scripts]

[tool.setuptools_scm]
write_to = "afs_ioc_migration/_version.py"

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "afs_ioc_migration*", ]
namespaces = false

[tool.setuptools.dynamic.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

[tool.setuptools.dynamic.optional-dependencies.test]
file = "dev-requirements.txt"
